--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
     border-radius: 100px 100px;
     
 }
-a{
+/* a{
     cursor: pointer;
     position: absolute;
     top: 36%;
@@ -52,7 +52,7 @@ a{
     opacity: 0;
    
 }
-
+ */
 
 .next {
     right: 26.3rem;
