--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
     border-radius: 100px 100px;
     
 }
- a{
+/*  a{
     cursor: pointer;
     position: absolute;
     top: 36%;
@@ -51,7 +51,7 @@
     /* /* user-select: none; */
     opacity: 0;
    
-}
+} */
  
 
 .next {
